# duckdb-read-stat

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: MainDistributionPipeline.yml
src/: duckdb_read_stat.c  duckdb_read_stat_sas.c
src/include/: duckdb_read_stat.h  duckdb_read_stat_sas.h
test/sql/: dates.test  sample.test  sample_missing.test
